# CurveIntersection

./: CMakeLists.txt  README.md
Example/: patch_test1.txt  patch_test2.txt  patchpatch_test1.txt  patchpatch_test2.txt  tri_test1.txt  tri_test2.txt  tripatch_test1.txt  tripatch_test2.txt  tritri_test1.txt  tritri_test2.txt
src/: BSplinePatch.cpp  BSplinePatch.h  BezierTri.cpp  BezierTri.h  Common.h  Generator.cpp  IOUtils.h  PatchPatchSolver.cpp  PatchPatchSolver.h  TriPatchSolver.cpp  TriPatchSolver.h  TriTriSolver.cpp  TriTriSolver.h
